<resources>
    <string name="app_name">Exploring Android Libraries</string>
    <string name="you_are_in_the_main_menu">You are in the main menu!</string>
    <string name="card_sample_description">Implementing third-party libraries and exploring what they have to offer</string>
    <string name="card_sample_title">Retrofit</string>
    <string name="card_sample_subtitle">Using get to obtain data from a web service</string>
    <string name="response_fail">The response failed.</string>
    <string name="retrofit_client">Retrofit Client</string>
    <string name="retrofit_client_description">Write a user ID to obtain his posts</string>
    <string name="user_id">User ID</string>
    <string name="get_posts">Get Posts</string>
    <string name="clear_result">Clear Result</string>
    <string name="powered_by_jsonplaceholder_typicode_com">Powered by jsonplaceholder.typicode.com</string>
    <string name="response_empty">There\'s no posts!</string>
    <string name="get_users">Get Users</string>
    <string name="retrofit_adapters_rxjava">Retrofit Adapters\nRxJava and RxAndroid</string>
    <string name="retrofit_adapters_rxjava_description">Here we obtain a list of users from our web service. Reactive programming is implemented to take care of the response retrieved by Retrofit.</string>
    <string name="powered_by_stackoverflow">Powered by StackOverflow.com</string>
    <string name="retrofit_gson">Retrofit | GSON</string>
    <string name="select_a_question">Select a question:</string>
    <string name="powered_by_github">Powered by Github.com</string>
    <string name="retrofit_rxjava">Retrofit | RxJava</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retrofit_rxjava_description">Authenticate with a valid Github account. Retrofit handles the authentication process. Once you\'re authenticated you will see your repositories with his respective issues. Send a comment to the selected issue by pressing the \'Post Comment\' button.</string>
    <string name="github_login">Github Login</string>
    <string name="your_repositories">Your repositories</string>
    <string name="issues">Issues</string>
    <string name="write_a_comment_to_this_issue">Write a comment to this issue</string>
    <string name="post_comment">Post Comment</string>
    <string name="powered_by_twitter">Powered by Twitter.com</string>
    <string name="retrofit_oauth">Retrofit | OAuth</string>
    <string name="retrofit_oauth_description">We obtain details from a twitter account using retrofit to connect with the OAuth credentials</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="description">Description</string>
    <string name="request_token">Request\nToken</string>
    <string name="request_user_details">Request\nDetails</string>

</resources>