<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RetrofitRxJava">

    <TextView
        android:id="@+id/tvRRxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/retrofit_rxjava"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRRxDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/retrofit_rxjava_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRRxTitle" />

    <Button
        android:id="@+id/btnRRxGithubLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="326dp"
        android:text="@string/github_login"
        app:layout_constraintBottom_toTopOf="@+id/ivRRxGithubLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRRxDescription" />

    <ProgressBar
        android:id="@+id/pbRRxLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvRRxRepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_repositories"
        app:layout_constraintBottom_toTopOf="@+id/sRRxRepos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRRxDescription"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/sRRxRepos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvRRxIssues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRRxRepos" />

    <TextView
        android:id="@+id/tvRRxIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/issues"
        app:layout_constraintBottom_toTopOf="@+id/sRRxIssues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sRRxRepos" />

    <Spinner
        android:id="@+id/sRRxIssues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/etRRxComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRRxIssues" />

    <EditText
        android:id="@+id/etRRxComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/write_a_comment_to_this_issue"
        android:inputType="textPersonName"
        android:maxLength="250"
        android:maxLines="4"
        app:layout_constraintBottom_toTopOf="@+id/btnRRxPostComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnRRxPostComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/post_comment"
        app:layout_constraintBottom_toTopOf="@+id/ivRRxGithubLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRRxBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/powered_by_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivRRxGithubLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRRxBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_github"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupNotAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnRRxGithubLogin"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="etRRxComment,tvRRxRepos,sRRxIssues,btnRRxPostComment,sRRxRepos,tvRRxIssues"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>